--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -15,16 +15,16 @@
         justify-content: space-between;
         padding: 20px 0;
     }
-    input[type=checkbox] {
-        opacity: 0;
-        position: absolute;
-        &:checked ~ .slideOutNav {
-            left: 0;
-        }
-        &:focus + label {
-            border: 1px dotted $primary;
-        }
-    }
+    // input[type=checkbox] {
+    //     opacity: 10;
+    //     position: absolute;
+    //     // &:checked ~ .slideOutNav {
+    //     //     left: 0;
+    //     // }
+    //     // &:focus + label {
+    //     //     border: 1px dotted $primary;
+    //     // }
+    // }
     label {
         cursor: pointer;
     }
